# audio-pipeline

./: CHARTER.md  Cargo.toml  DESIGN_SUMMARY.md  OVERVIEW.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INTEGRATION.md  USER_GUIDE.md
src/: error.rs  lib.rs
src/asr/: caiman.rs  mod.rs
src/audio/: mod.rs
src/pipeline/: mod.rs
src/sentiment/: gpu.rs  mod.rs
src/vad/: mod.rs  silero.rs
