[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "audio-pipeline"
version = "0.1.0"
description = "Real-time audio processing for interruption detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "onnxruntime-gpu>=1.16.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.maturin]
python-source = "python"
module-name = "audio_pipeline._audio_pipeline"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
